--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
   "author": "Blake Johnston",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.16.0",
+    "chart.js": "^2.4.0",
+    "cheerio": "^0.22.0",
     "dotenv": "^1.2.0",
     "express": "^4.12.4",
     "express-session": "^1.11.3",
+    "fs": "0.0.1-security",
     "handlebars": "^4.0.6",
+    "jquery": "^3.1.1",
     "mongodb": "^2.2.21",
     "mongoose": "^4.1.0",
     "passport": "^0.3.2",
