--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "passport": "^0.3.2",
     "passport-github": "^1.0.0",
     "passport-twitter": "^1.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
